"refactor(discovery): extract url normalizer"